# emojipick

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md  config.example.toml  emojipick.service  org.emojipick.Emojipick.desktop
src/: config.rs  emoji.rs  emoji_object.rs  frecency.rs  hotkey.rs  inject.rs  ipc.rs  main.rs  theme.rs  ui.rs
