[package]
name = "emojipick"
version = "0.1.5"
edition = "2024"
description = "A fast, frecency-ranked emoji picker for KDE Plasma Wayland with a native global shortcut"
license = "GPL-3.0-only"
repository = "https://github.com/guitaripod/emojipick"
homepage = "https://github.com/guitaripod/emojipick"
readme = "README.md"
keywords = ["emoji", "picker", "kde", "wayland", "gtk"]
categories = ["gui"]
exclude = ["/pkg", "/*.pkg.tar.zst", "/.github"]

[dependencies]
anyhow = "1.0.103"
async-channel = "2.5.0"
dirs = "6.0.0"
emojis = "0.9.0"
fuzzy-matcher = "0.3.7"
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_12"] }
libc = "0.2.186"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
zbus = "5.17.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
